fix(EnfermeriaHeroSection): improve mobile layout and text styles for enhanced readability and responsiveness

--- a/src/app/enfermeria/components/HeroSection/EnfermeriaHeroSection.module.scss
+++ b/src/app/enfermeria/components/HeroSection/EnfermeriaHeroSection.module.scss
@@ -3,6 +3,10 @@
 
 .hero {
   .hero__content {
+    @include respond-to-max("laptop") {
+      grid-template-rows: 60% 40%;
+    }
+
     .hero__img__desktop {
       width: 80%;
       max-width: 900px;
@@ -28,11 +32,10 @@
     .hero__img__mobile {
       display: none;
       @include respond-to-max("laptop") {
-        display: block;
-        align-self: auto;
-        width: 90vw;
+        width: 80vw;
         height: auto;
         max-width: 500px;
+        display: block;
       }
     }
 
@@ -48,33 +51,65 @@
       display: none;
 
       @include respond-to-max("laptop") {
+        align-self: start;
+
+        margin: 1.5rem 15px 0;
         display: flex;
         flex-direction: column;
         align-items: center;
-
-        margin-top: 4rem;
         h1 {
-          font-size: clamp(16px, 5vw, 30px);
-          text-align: center;
+          font-size: clamp(16px, 12vw, 100px);
+          padding: 0;
+          margin-bottom: 0.5rem;
           text-wrap: balance;
+          text-align: center;
+          background: linear-gradient(
+            to right,
+            #50b8f8 35%,
+            #1ca5f6 50%,
+            #9930f4 100%
+          );
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          background-clip: text;
+          color: transparent;
+          font-weight: 900;
+          line-height: 1.1;
+          filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.6));
+          -webkit-filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.6));
 
-          color: #fff;
-          font-weight: 700;
-          line-height: 1.2;
+          .hide__mobile {
+            display: none;
+          }
         }
 
         p {
-          font-size: clamp(16px, 2.5vw, 20px);
+          font-size: clamp(16px, 4.5vw, 80px);
           text-align: center;
-          text-wrap: balance;
-
-          width: 70vw;
-
-          margin-top: 0.8rem;
-
-          color: #fff;
-          margin-bottom: 2rem;
           font-weight: 400;
+          text-wrap: balance;
+          line-height: 1.4;
+          padding: 0 5vw;
+          margin-top: 1rem;
+          color: #fff;
+
+          margin: 0.5rem 0;
+
+          span {
+            font-size: clamp(16px, 6vw, 80px);
+            font-weight: 600;
+          }
+        }
+
+        .separador__text {
+          width: 60vw;
+          height: auto;
+        }
+
+        .hero__btn {
+          margin-bottom: 2rem;
+          margin-top: 2rem;
+          padding: 0.5rem 2rem;
         }
       }
     }
